--- a/assets/locales/en-US/translation.json5
+++ b/assets/locales/en-US/translation.json5
@@ -70,5 +70,8 @@
     continueToCourse: 'Continue to course.',
     externalLesson: 'This is an external lessons.',
     continueToLesson: 'Continue to lesson.'
+  },
+  searchjs: {
+    nothingFound: 'Nothing found.'
   }
 }
