--- a/assets/locales/nb-NO/translation.json5
+++ b/assets/locales/nb-NO/translation.json5
@@ -68,5 +68,8 @@
     continueToCourse: 'Forsett til kurset.',
     externalLesson: 'Dette er en ekstern oppgave.',
     continueToLesson: 'Fortsett til oppgaven.'
+  },
+  searchjs: {
+    nothingFound: 'Ingenting funnet.'
   }
 }
